--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     /* Centraliza conteúdo verticalmente */
     font-family: Arial, Helvetica, sans-serif;
     /* Define a fonte */
-    background-color: #f2f2f2;
+    background-color: #232b2b;
     /* Cor de fundo */
 }
 
@@ -40,6 +40,7 @@ body {
     /* Espaçamento interno */
     display: flex;
     /* Usa flexbox para o layout */
+    border-radius: 25px;
 }
 
 
@@ -162,8 +163,23 @@ body {
     /* Cor de fundo verde */
 }
 
+.tela {
+    padding: 8px;
+}
+
+.info-voto-titulo {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    gap: 5px;
+}
 
 /* Estilo para os campos de números */
+
+.info-voto-numeros {
+    display: flex;
+    flex-direction: row;
+}
 
 .numero {
     display: inline-block;
@@ -173,6 +189,7 @@ body {
     height: 40px;
     /* Altura */
     border: 1px solid #999999;
+    border-radius: 8px;
     /* Borda */
     text-align: center;
     /* Alinha texto ao centro */
@@ -267,4 +284,10 @@ body {
     /* Tamanho da fonte */
     color: #d9534f;
     /* Cor vermelha */
+}
+
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
