--- a/style.css
+++ b/style.css
@@ -223,15 +223,16 @@ body {
     /* Texto centralizado */
     font-size: 14px;
     /* Tamanho da fonte */
-    padding: 10px;
+    padding: 30px;
     /* Espaçamento interno */
-    max-width: 200px;
+    width: 30%;
     /* Largura máxima */
     height: auto;
     /* Altura automática */
     overflow: hidden;
     /* Oculta conteúdo excedente */
-
+    flex-direction: row;
+    justify-content: center;
     display: none;
 }
 
@@ -239,18 +240,11 @@ body {
 /* Estilo para as imagens dentro do contêiner de imagem */
 
 .info-imagem img {
-    max-width: 100%;
-    /* Largura máxima */
-    max-height: 100%;
-    /* Altura máxima */
-    border-radius: 5px;
-    /* Bordas arredondadas */
-    object-fit: contain;
-    /* Ajusta imagem dentro do contêiner */
-    width: 100%;
-    /* Largura total */
-    height: auto;
-    /* Altura automática */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 90%;
 }
 
 
@@ -304,19 +298,20 @@ body {
 }
 
 .small {
-  width: 50px;
   margin: 0 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-wrap: nowrap;
   text-align: center;
+  max-width: 50px;
 }
 
 .candidato-main-image {
   min-width: 100px;
   max-width: 200px;
 }
+
 .centered {
     display: flex;
     justify-content: center;
