--- a/style.css
+++ b/style.css
@@ -101,6 +101,8 @@ body {
     background-color: #999999;
     /* Cor de fundo */
     color: #ffffff;
+
+    box-shadow: 0px 2px 0px 1px rgba(0, 0, 0, 0.2);
     /* Cor do texto */
     font-size: 25px;
     /* Tamanho da fonte */
@@ -125,6 +127,7 @@ body {
 
 .botao--branco {
     background-color: #ffffff;
+    box-shadow: 0px 2px 0px 1px rgba(0, 0, 0, 0.2);
     /* Fundo branco */
     color: #000000;
     /* Cor do texto preta */
@@ -151,7 +154,8 @@ body {
 /* Estilo específico para o botão corrige */
 
 .botao--corrige {
-    background-color: #f0ad4e;
+    background-color: rgb(234, 141, 12);
+    box-shadow: 0px 2px 0px 1px rgba(234, 141, 12, 0.7);
     /* Cor de fundo laranja */
 }
 
@@ -159,7 +163,8 @@ body {
 /* Estilo específico para o botão confirma */
 
 .botao--confirma {
-    background-color: #5cb85c;
+    background-color: rgb(92, 184, 92);
+    box-shadow: 0px 2px 0px 1px rgba(92, 184, 92, 0.8);
     /* Cor de fundo verde */
 }
 
